name:                Maze
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/Maze#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable Maze
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -funfolding-use-threshold=16 -O2 -optc-O3
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , lens >= 4.12
                     , mtl >= 2.2.1
                     , diagrams >= 1.3
                     , diagrams-lib >= 1.3
                     , diagrams-cairo >= 1.3
                     , mwc-random >= 0.13
                     , optparse-applicative >= 0.11
                     , transformers >= 0.4
                     , vector >= 0.10